--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
         <button data-number>0</button>
         <button data-equals class="spanDos">=</button>
     </div>
+     <button id="Evento">BOTON PRIMER EVENTO</button>
 </body>
 </html>
