--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="calculadoraGrid">
-        <h1>Calculadora JS V 0.2</h1>
+        <h1 id="titulo" >Calculadora JS V 0.2</h1>
         <div class="output">
             <div data-previous-operation class="previousOperation"></div>
             <div data-current-operation class="currentOperation"></div>
@@ -34,6 +34,6 @@
         <button data-number>0</button>
         <button data-equals class="spanDos">=</button>
     </div>
-     <button id="Evento">BOTON PRIMER EVENTO</button>
+            <button id="Evento">BOTON PRIMER EVENTO</button>
 </body>
 </html>
